# boinc-ipc-manager-rs

./: Cargo.toml  README.md
src/: main.rs  process.rs
